ArrayLists can now also be used as SplittableSets.
LinkedLists and ArrayLists can either use linear comparison or binary
searches. Recorded minute long tests for most parameter variations.